--- a/titlepages/cover.tex
+++ b/titlepages/cover.tex
@@ -19,7 +19,7 @@ Thomas Brüggemann
 % Titel
 \begin{center}
 \LARGE 
-    Automating The Privacy Risk Assessment Of mHealth Apps
+    Automating the Privacy Risk Assessment of mHealth Apps
 \end{center}
 
 \vspace*{8mm}
