--- a/expose.tex
+++ b/expose.tex
@@ -290,7 +290,7 @@ Therefore, we reduce the dataset to the 3,180 free apps, which is still 59.1\% o
 We will download as many of these 3,180 apps as possible.
 Download limitations could arise from the fact that Google blocks requests on the API as soon as the system detects heavy use or misuse. 
 Downloading 3,180 apps in a short period of time will likely trigger these security mechanisms, since a normal user could never download that many apps in the same timeframe from the PlayStore.
-Careful download rate implementation is necessary.
+A careful download rate implementation is necessary.
 
 As soon as the \acs{APK} files are available offline, the decompiling phase of the study will begin.
 Our decompiling process consists of four steps.
